@@ -13,7 +13,7 @@ node_revision_delete.settings:
       label: 'Frequency with which to delete revisions while cron is running'
     node_revision_delete_when_to_delete_time:
       type: mapping
-      label: 'Time configuration to know when the revision should be deleted'
+      label: 'Time options for the inactivity time that the revision must have to be deleted'
       mapping:
         max_number:
           type: integer
@@ -23,14 +23,14 @@ node_revision_delete.settings:
           label: 'The time value for when_to_delete configuration (days, weeks or months)'
     node_revision_delete_minimum_age_to_delete_time:
       type: mapping
-      label: 'Time configuration to know the minimum age that the revision should have to be deleted'
+      label: 'Time options to know the minimum age that the revision must have to be delete'
       mapping:
         max_number:
           type: integer
           label: The maximum number for minimum_age_to_delete configuration'
         time:
           type: string
-          label: 'The time value for when_to_delete configuration (days, weeks or months)'
+          label: 'The time value for minimum_age_to_delete configuration (days, weeks or months)'
     node_revision_delete_track:
       type: sequence
       label: 'Configuration for each content_type'
